--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         function prank() {
             document.getElementById('message-box').innerHTML = `<h2>🎖️ You have just unlocked the "Most Unfoolable Person of the Year" award! 🏆<br><br>
             We officially declare that you won’t be fooled for the next 365 days—but hey, today was an exception. 😜<br><br>
-            Enjoy the honor, but remember... this message will self-destruct if shared! 🤫🔥</h2>`;
+            Enjoy the honor, but remember... this message will self-destruct if shared! 🤫🔥</h2>
+            <h1> <b> April Fool! </b>😆 </h1>`;
             document.getElementById('foolSound').play();
         }
     </script>
